--- a/app/src/main/res/layout/activity_subtitle.xml
+++ b/app/src/main/res/layout/activity_subtitle.xml
@@ -41,7 +41,7 @@
         android:onClick="switchScreen"
         android:layout_height="wrap_content" />
     <Button
-        android:text="选择视频"
+        android:text="视频"
         android:id="@+id/chooserVideoBtn"
         android:layout_below="@+id/zimuPath"
         android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
         android:onClick="showVideoChooser"
         android:layout_height="wrap_content" />
     <Button
-        android:text="选择字幕"
+        android:text="字幕"
         android:id="@+id/chooserZimuBtn"
         android:layout_below="@+id/zimuPath"
         android:layout_width="wrap_content"
@@ -58,10 +58,19 @@
         android:layout_height="wrap_content" />
     <Button
         android:text="复制整句"
+        android:id="@+id/copyZimuBtn"
         android:layout_below="@+id/zimuPath"
         android:layout_width="wrap_content"
         android:layout_toRightOf="@+id/chooserZimuBtn"
         android:onClick="copyOneContent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:text="重装字幕"
+        android:id="@+id/reZimuPath"
+        android:layout_below="@+id/zimuPath"
+        android:layout_width="wrap_content"
+        android:layout_toRightOf="@+id/copyZimuBtn"
+        android:onClick="reZimuPath"
         android:layout_height="wrap_content" />
 
 
