--- a/app/src/main/res/layout/activity_subtitle.xml
+++ b/app/src/main/res/layout/activity_subtitle.xml
@@ -110,7 +110,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:padding="51dp"
-            android:textColor="#FFD700"
+            android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
         <include
